--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
 
 android {
     compileSdkVersion 25
@@ -21,6 +23,7 @@ android {
 
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.1'
+    implementation 'com.google.firebase:firebase-crash:11.4.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.3.1'
@@ -28,4 +31,13 @@ dependencies {
     compile 'org.pcap4j:pcap4j-packetfactory-static:1.+'
     compile 'javax.jmdns:jmdns:3.4.1'
     compile 'com.android.support:design:25.3.1'
+
+    // Check for v11.4.2 or higher
+    implementation 'com.google.firebase:firebase-core:11.4.2'
+
+    // Add dependency
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
