--- a/build.gradle
+++ b/build.gradle
@@ -3,18 +3,34 @@
 buildscript {
     repositories {
         jcenter()
+
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:3.1.0'
+
+        // Check for v3.1.2 or higher
+        classpath 'com.google.gms:google-services:4.1.0'
+
+        // Add dependency
+        classpath 'io.fabric.tools:gradle:1.25.4'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+
+        // Add repository
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
 }
 
