--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,19 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        android:largeHeap="true">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SummaryActivity" />
-        <activity android:name=".PortScanActivity" />
-        <activity android:name=".BannerGrabActivity" />
-        <activity android:name=".VulnerabilitiesActivity"></activity>
+        <activity android:name=".SummaryActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".PortScanActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".BannerGrabActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".VulnerabilitiesActivity" android:screenOrientation="portrait" />
     </application>
 
 </manifest>
